--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@
   <!-- ========= MAP ========= -->
   <div class="map-wrap">
     <!-- Загружай свою карту сюда: /images/map.png -->
-    <img id="bgImage" src="images/map.png" alt="">
+    <img id="bgImage" src="/metro.png" alt="">
     <svg id="mapSvg" viewBox="-200 -200 1200 1200">
       <g id="mapGroup"></g>
       <g id="routeGroup"></g>
