--- a/test.html
+++ b/test.html
@@ -136,7 +136,7 @@
 <div class="app">
 
   <div class="map-wrap">
-    <img id="bgImage" src="images/map.png">
+    <img id="bgImage" src="metro.png">
 
     <svg id="mapSvg" viewBox="-200 -200 1200 1200">
       <g id="mapGroup"></g>
