--- a/test.html
+++ b/test.html
@@ -136,7 +136,7 @@
 <div class="app">
 
   <div class="map-wrap">
-    <img id="bgImage" src="metro.png">
+    <img id="bgImage" src="img/metro.png">
 
     <svg id="mapSvg" viewBox="-200 -200 1200 1200">
       <g id="mapGroup"></g>
@@ -161,21 +161,18 @@
    1. СТАНЦИИ (редактируешь тут)
    =============================================== */
 const stations = {
-  s1:{name:"Академическая", x:400, y:400},
-  s2:{name:"Профсоюзная", x:400, y:520},
-  s3:{name:"Новые Черёмушки", x:400, y:660},
-  s4:{name:"Калужская", x:400, y:820},
-  s5:{name:"Крымская", x:320, y:480},
-  s6:{name:"Столица", x:400, y:100},
+  s1:{name:"Академическая", x:480, y:370},
+  s5:{name:"Гольяново", x:390, y:340},
+  s6:{name:"Capital", x:400, y:100},
 };
 
 /* ===============================================
    2. ВЕТКИ (редактируешь тут)
    =============================================== */
 const lines = [
-  {name:"Оранжевая", color:"#ff8a00", stations:["s1","s2","s3","s4"]},
+  {name:"Оранжевая", color:"#ff8a00", stations:["s1"]},
   {name:"Красная", color:"#d62828", stations:["s6","s1"]},
-  {name:"Серая", color:"#444444", stations:["s5","s1"]},
+  {name:"Чёрная", color:"#444444", stations:["s5","s1"]},
 ];
 
 /* ----------------------------------------------- */
