--- a/test.html
+++ b/test.html
@@ -1,1 +1,339 @@
-в
+<!doctype html>
+<html lang="ru">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<title>КБшерский Метрополитен</title>
+
+<style>
+  :root{
+    --bg:#0f0f0f;
+    --panel:#111214ee;
+    --accent:#00c2a8;
+    --muted:#9aa0a6;
+  }
+
+  html,body{
+    margin:0;
+    height:100%;
+    background:var(--bg);
+    font-family: -apple-system, system-ui, "SF Pro Text", Roboto;
+    color:#fff;
+    overflow:hidden;
+  }
+
+  /* --- контейнер карты --- */
+  .map-wrap{
+    position:absolute;
+    inset:0;
+    overflow:hidden;
+  }
+
+  #bgImage{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    opacity:0.28;
+    pointer-events:none;
+    z-index:0;
+  }
+
+  #mapSvg{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    z-index:10;
+  }
+
+  /* --- нижняя панель как в приложении --- */
+  .bottom-panel{
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:0;
+    padding:16px 20px 32px;
+    background:var(--panel);
+    backdrop-filter:blur(20px);
+    border-radius:18px 18px 0 0;
+    display:flex;
+    flex-direction:column;
+    gap:12px;
+    box-shadow:0 -10px 30px #0008;
+  }
+
+  .select{
+    width:100%;
+    padding:14px;
+    border-radius:12px;
+    border:1px solid #333;
+    background:#000;
+    color:#fff;
+    font-size:16px;
+  }
+
+  .btn{
+    padding:14px;
+    border-radius:12px;
+    background:var(--accent);
+    border:0;
+    font-size:16px;
+    font-weight:700;
+    color:#000;
+  }
+
+  .btn2{
+    padding:14px;
+    border-radius:12px;
+    background:#333;
+    border:0;
+    font-size:15px;
+  }
+
+  .timeBox{
+    background:#00000055;
+    padding:14px;
+    font-size:18px;
+    border-radius:12px;
+    text-align:center;
+  }
+
+  /* Навигация снизу */
+  .nav{
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:62px;
+    background:#111214cc;
+    backdrop-filter:blur(20px);
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    border-top:1px solid #222;
+  }
+
+  .nav-item{
+    text-align:center;
+    font-size:12px;
+    color:var(--muted);
+  }
+
+  /* --- линии метро --- */
+  .line{
+    fill:none;
+    stroke-width:6;
+    stroke-linecap:round;
+  }
+
+  .station{
+    fill:#fff;
+    stroke:#000;
+    stroke-width:2;
+  }
+
+  .station-small{ r:5; }
+  .station-transfer{ r:7; }
+
+  .station-label{
+    fill:#fff;
+    font-size:12px;
+    pointer-events:none;
+  }
+
+  .route-line{
+    fill:none;
+    stroke:#fff;
+    stroke-width:8;
+  }
+</style>
+</head>
+
+<body>
+
+<div class="map-wrap">
+  <img id="bgImage" src="metro.png">
+
+  <svg id="mapSvg" viewBox="-200 -200 1200 1200">
+    <g id="mapGroup"></g>
+    <g id="routeGroup"></g>
+  </svg>
+</div>
+
+<!-- нижняя панель -->
+<div class="bottom-panel">
+  <select id="fromSel" class="select"></select>
+  <select id="toSel" class="select"></select>
+  
+  <button id="goBtn" class="btn">Построить маршрут</button>
+  <button id="clrBtn" class="btn2">Очистить</button>
+
+  <div id="timeBox" class="timeBox">Время: —</div>
+</div>
+
+<!-- панель навигации -->
+<div class="nav">
+  <div class="nav-item">Маршрут</div>
+  <div class="nav-item">Кабинет</div>
+  <div class="nav-item">Город</div>
+  <div class="nav-item">Новости</div>
+</div>
+
+<script>
+/* === Твои данные станций === */
+const stations = {
+  s1:{name:"Академическая", x:480, y:370},
+  s5:{name:"Гольяново", x:390, y:340},
+  s6:{name:"Capital", x:400, y:100},
+};
+
+const lines = [
+  {name:"Оранжевая", color:"#ff8a00", stations:["s1"]},
+  {name:"Красная", color:"#d62828", stations:["s6","s1"]},
+  {name:"Чёрная", color:"#444", stations:["s5","s1"]},
+];
+
+const mapGroup = document.getElementById("mapGroup");
+const routeGroup = document.getElementById("routeGroup");
+const svgNS="http://www.w3.org/2000/svg";
+
+const fromSel=document.getElementById("fromSel");
+const toSel=document.getElementById("toSel");
+
+/* Граф */
+const graph={};
+Object.keys(stations).forEach(id=>graph[id]=new Set());
+
+lines.forEach(l=>{
+  for(let i=0;i<l.stations.length-1;i++){
+    const a=l.stations[i], b=l.stations[i+1];
+    graph[a].add(b); graph[b].add(a);
+  }
+});
+
+/* --- рисуем карту --- */
+function makePath(ids){
+  return ids.map((id,i)=>(i===0?"M":"L")+" "+stations[id].x+" "+stations[id].y).join(" ");
+}
+
+function drawMap(){
+  mapGroup.innerHTML="";
+
+  lines.forEach(l=>{
+    const p=document.createElementNS(svgNS,"path");
+    p.setAttribute("class","line");
+    p.setAttribute("stroke",l.color);
+    p.setAttribute("d",makePath(l.stations));
+    mapGroup.appendChild(p);
+  });
+
+  Object.keys(stations).forEach(id=>{
+    const st=stations[id];
+    const g=document.createElementNS(svgNS,"g");
+    g.setAttribute("transform",`translate(${st.x},${st.y})`);
+    g.dataset.id=id;
+
+    const cnt=lines.filter(L=>L.stations.includes(id)).length;
+    const circle=document.createElementNS(svgNS,"circle");
+    circle.classList.add("station", cnt>1?"station-transfer":"station-small");
+
+    const txt=document.createElementNS(svgNS,"text");
+    txt.classList.add("station-label");
+    txt.setAttribute("x",10);
+    txt.setAttribute("y",4);
+    txt.textContent=st.name;
+
+    g.append(circle,txt);
+    g.onclick=()=>stationClick(id);
+
+    mapGroup.appendChild(g);
+  });
+
+  fillSelectors();
+}
+
+drawMap();
+
+/* выбор станции тапом */
+let clickIndex=0;
+function stationClick(id){
+  if(clickIndex%2===0) fromSel.value=id;
+  else toSel.value=id;
+  clickIndex++;
+}
+
+/* селекты */
+function fillSelectors(){
+  fromSel.innerHTML="";
+  toSel.innerHTML="";
+  Object.keys(stations).forEach(id=>{
+    fromSel.add(new Option(stations[id].name,id));
+    toSel.add(new Option(stations[id].name,id));
+  });
+}
+
+/* BFS */
+function findRoute(start,end){
+  const q=[start];
+  const prev={};
+  prev[start]=null;
+
+  while(q.length){
+    const u=q.shift();
+    for(const v of graph[u]){
+      if(!(v in prev)){
+        prev[v]=u;
+        q.push(v);
+        if(v===end){
+          const path=[];
+          let c=v;
+          while(c){path.push(c); c=prev[c];}
+          return path.reverse();
+        }
+      }
+    }
+  }
+  return null;
+}
+
+function sameLine(a,b,c){
+  return lines.some(L=>{
+    const s=L.stations;
+    return s.includes(a)&&s.includes(b)&&s.includes(c);
+  });
+}
+
+function computeTime(path){
+  let t=(path.length-1)*2;
+  for(let i=1;i<path.length-1;i++){
+    if(!sameLine(path[i-1], path[i], path[i+1])) t+=3;
+  }
+  return t;
+}
+
+function drawRoute(path){
+  routeGroup.innerHTML="";
+  if(!path) return;
+  const p=document.createElementNS(svgNS,"path");
+  p.setAttribute("d",makePath(path));
+  p.setAttribute("class","route-line");
+  routeGroup.appendChild(p);
+}
+
+document.getElementById("goBtn").onclick=()=>{
+  const A=fromSel.value, B=toSel.value;
+  const r=findRoute(A,B);
+  if(!r){ alert("Маршрут не найден"); return; }
+  drawRoute(r);
+  timeBox.textContent="Время: "+computeTime(r)+" мин";
+};
+
+document.getElementById("clrBtn").onclick=()=>{
+  routeGroup.innerHTML="";
+  timeBox.textContent="Время: —";
+};
+</script>
+</body>
+</html>
