--- a/test.html
+++ b/test.html
@@ -224,8 +224,8 @@ const stations = {
    =============================================== */
 const lines = [
   {name:"Оранжевая", color:"#ff8a00", stations:["s1"]},
-  {name:"Красная", color:"#d62828", stations:["s3",""]},
-  {name:"Чёрная", color:"#444444", stations:["","s2","s1"]},
+  {name:"Красная", color:"#d62828", stations:["s3"]},
+  {name:"Чёрная", color:"#444444", stations:["s2","s1"]},
 ];
 
 const mapGroup = document.getElementById("mapGroup");
